adding comment in accountForm.html

--- a/lightningExamples/force-app/main/default/lwc/accountForm/accountForm.html
+++ b/lightningExamples/force-app/main/default/lwc/accountForm/accountForm.html
@@ -1,4 +1,5 @@
 <template>
+    <!-- Moving to Dev branch Github-->
     <lightning-record-edit-form class="Account" object-api-name="Account" onload={handleLoad} onsubmit={handleSubmit} onsuccess={handleSucess}>
         <lightning-input-field field-name="Name" onchange={handleNameChange}>
         </lightning-input-field>
