--- a/lightningExamples/force-app/main/default/lwc/applicantCreation/applicantCreation.html
+++ b/lightningExamples/force-app/main/default/lwc/applicantCreation/applicantCreation.html
@@ -1,5 +1,6 @@
 <template>
     <lightning-card>
+      <!-- moving to Git hub-->
         <lightning-input label="Application" onchange={handleApplication} value={recordId}></lightning-input>
         <lightning-input label="FirstName" onchange={handleFirstName} name="firstName"></lightning-input>
         <lightning-input label="Driving License" type="checkbox" onchange={handleDrivingLicense} name="drivingLicense"></lightning-input>
